# blender-addon-tester

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  blender_requirements.txt  contributing.md  rebuild_and_pipreinstall.sh  rebuild_pipreinstall_and_testexamples.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  test-fake-addon-example-from-github-pip-nightly.yml  test-fake-addon-example-from-github-pip.yml  test-fake-addon-example-from-local-wheel-macos.yml  test-fake-addon-example-from-local-wheel.yml  test-fake-addon-example.yml  test-tls-macos-nonreg.yml
.github/workflows/backup/: test-fake-addon-example-from-github-pip.yml
blender-addon-tester/: __init__.py
blender_addon_tester/: __init__.py  addon_helper.py  blender_load_pytest.py  blender_requirements.txt  get_blender.py  load_pytest.py  requirements.txt  run_blender.py
docs/: index.rst
examples/testing-fake-addon/: README.md  blender_advanced_load_pytest.py  requirements.txt  testGetBlender.py  test_addon_blender.py  test_addon_blender_advanced.py  test_addon_blender_prezipped_addon.py  test_fake_addon_blender.py  test_fake_addon_blender_280.py  test_fake_addon_blender_advanced.py  test_fake_addon_blender_prezipped_addon.py
examples/testing-fake-addon/tests/: test_version.py
examples/testing-io_scene_obj/: .coveragerc  io_import_images_as_planes.py  test_addon_blender.py
fake_addon/: __init__.py
scripts/: addon_helper.py  get_blender.py  get_python.sh  load_pytest.py  run_blender.py
tests/: addon_helper.py  get_blender.py  load_pytest.py  run_blender.py
(+4 files in other folders)
