# package information
[metadata]
name = blender_addon_tester
version = attr: blender_addon_tester.version.__version__
description = Add-On Tester for Blender using Pytest
keywords = blender, importer, lightwave
author = Dave Keeshan
author_email = dave.keeshan@daxzio.com
license = MIT
url = https://github.com/nangtani/blender-addon-tester
project_urls =
    Bug Tracker = https://github.com/nangtani/blender-addon-tester/issues
    Source Code = https://github.com/nangtani/blender-addon-tester
download_url = https://github.com/nangtani/blender-addon-tester/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Artistic Software
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    bs4
    requests
    flake8
    dmglib
    exceptiongroup
    iniconfig

[options.extras_require]
test =
    pytest
